--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,14 +33,16 @@ services:
       - db
     environment:
       - DJANGO_DB=default
-      - POSTGRE_NAME=postgres
+      - POSTGRE_NAME=labelstudio
       - POSTGRE_USER=postgres
-      - POSTGRE_PASSWORD=
+      - POSTGRE_PASSWORD=${DB_PASSWD}
       - POSTGRE_PORT=5432
-      - POSTGRE_HOST=db
+      - POSTGRE_HOST=labelstudio-db.caqqxzhptzmg.us-east-1.rds.amazonaws.com
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_HOST:-}
       - JSON_LOG=1
 #      - LOG_LEVEL=DEBUG
+      - LABEL_STUDIO_COPY_STATIC_DATA=true
+      - LABEL_STUDIO_ALLOW_ORGANIZATION_WEBHOOKS=true
     volumes:
       - ./mydata:/label-studio/data:rw
     command: label-studio-uwsgi
