--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,6 @@ services:
     image: heartexlabs/label-studio:latest
     expose:
       - "8000"
-    depends_on:
-      - db
     environment:
       - DJANGO_DB=default
       - POSTGRE_NAME=labelstudio
@@ -40,29 +38,12 @@ services:
       - POSTGRE_HOST=labelstudio-db.caqqxzhptzmg.us-east-1.rds.amazonaws.com
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_HOST:-}
       - JSON_LOG=1
-#      - LOG_LEVEL=DEBUG
+      - LOG_LEVEL=DEBUG
       - LABEL_STUDIO_COPY_STATIC_DATA=true
       - LABEL_STUDIO_ALLOW_ORGANIZATION_WEBHOOKS=true
     volumes:
       - ./mydata:/label-studio/data:rw
     command: label-studio-uwsgi
-
-  db:
-    image: postgres:11.5
-    hostname: db
-    restart: always
-    # Optional: Enable TLS on PostgreSQL
-    # Just drop your server.crt and server.key into folder 'deploy/pgsql/certs'
-    # NOTE: Both files must have permissions u=rw (0600) or less
-#    command: >
-#      -c ssl=on
-#      -c ssl_cert_file=/var/lib/postgresql/certs/server.crt
-#      -c ssl_key_file=/var/lib/postgresql/certs/server.key
-    environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
-    volumes:
-      - ${POSTGRES_DATA_DIR:-./postgres-data}:/var/lib/postgresql/data
-      - ./deploy/pgsql/certs:/var/lib/postgresql/certs:ro
 
 volumes:
   static: {}
